<resources>
    <string name="app_name">PlaylistApp</string>
    <string name="teStreamerNameHint">Streamer name</string>
    <string name="tvLabelNumber">/</string>
    <string name="tvLabelUsername">добавлено: </string>
    <string name="btnPrevSong">Previous</string>
    <string name="btnNextSong">Next</string>
    <string name="miPlaylistSync">Синхронизация со стримером</string>
    <string name="miSongAutoswitch">Автопереключение песен</string>
    <string name="miRefreshPlaylist">Автообновление плейлиста</string>
    <string name="tvLabelCurrentPlaylistType">Current playlist: </string>
    <string name="VERYBIGSTRING">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ</string>
    <string name="errWrongJSON">received malformed JSON or this streamer does not exist</string>
    <string name="errNetwork">can not connect to API</string>
</resources>