<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:textColorHint="@color/colorPrimary60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/teStreamerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/teStreamerNameHint"
            android:singleLine="true"
            android:textColor="@color/colorPrimary100" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtube_player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="1dp"
        app:autoPlay="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:showFullScreenButton="false"
        app:videoId="" />

    <TextView
        android:id="@+id/tvSongNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:maxEms="4"
        android:maxLines="1"
        android:text="0"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary87"
        app:layout_constraintEnd_toStartOf="@+id/tvLabelNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youtube_player_view" />

    <TextView
        android:id="@+id/tvLabelNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="1dp"
        android:text="@string/tvLabelNumber"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/tvMaxSongNumber"
        app:layout_constraintStart_toEndOf="@+id/tvSongNumber"
        app:layout_constraintTop_toBottomOf="@+id/youtube_player_view" />

    <TextView
        android:id="@+id/tvMaxSongNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="1dp"
        android:maxEms="4"
        android:maxLines="1"
        android:text="0"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary87"
        app:layout_constraintEnd_toStartOf="@+id/tvLabelUsername"
        app:layout_constraintStart_toEndOf="@+id/tvLabelNumber"
        app:layout_constraintTop_toBottomOf="@+id/youtube_player_view" />

    <TextView
        android:id="@+id/tvLabelUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="1dp"
        android:text="@string/tvLabelUsername"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/tvSongUsername"
        app:layout_constraintStart_toEndOf="@+id/tvMaxSongNumber"
        app:layout_constraintTop_toBottomOf="@+id/youtube_player_view" />

    <TextView
        android:id="@+id/tvSongUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:maxEms="10"
        android:maxLines="1"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLabelUsername"
        app:layout_constraintTop_toBottomOf="@+id/youtube_player_view" />

    <Button
        android:id="@+id/btnPrevSong"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:onClick="btnPrevSongOnClick"
        android:text="@string/btnPrevSong"
        app:layout_constraintEnd_toStartOf="@+id/btnNextSong"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSongUsername" />

    <Button
        android:id="@+id/btnNextSong"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:onClick="btnNextSongOnClick"
        android:text="@string/btnNextSong"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPrevSong"
        app:layout_constraintTop_toBottomOf="@+id/tvSongUsername" />

    <TextView
        android:id="@+id/tvLabelCurrentPlaylistType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="1dp"
        android:text="@string/tvLabelCurrentPlaylistType"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/tvCurrentPlaylistType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPrevSong" />

    <TextView
        android:id="@+id/tvCurrentPlaylistType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="8dp"
        android:maxEms="10"
        android:maxLines="1"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary87"
        app:layout_constraintBottom_toTopOf="@+id/pbPlaylistUpdating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLabelCurrentPlaylistType"
        app:layout_constraintTop_toBottomOf="@+id/btnNextSong" />

    <ProgressBar
        android:id="@+id/pbPlaylistUpdating"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toTopOf="@+id/lvPlaylist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentPlaylistType" />

    <ListView
        android:id="@+id/lvPlaylist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pbPlaylistUpdating" />

    <ProgressBar
        android:id="@+id/pbPlaylistLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lvPlaylist" />

</androidx.constraintlayout.widget.ConstraintLayout>